 * Icons that check units now have their units managed behind the scenes whenever possible so that icons aren't trying to check units that don't exist.
 * There is now an option (enabled by default) to color the names of units in text displays and outputs.
 * Added Floating Combat Text as a text output.
 * You can now press tab to insert the first entry that is displayed in the suggestion list.
 * Bug Fixes:
 ** (r427) (Condition):  attempt to call global 'GetPrimaryTalentTree' (a nil value)
 ** (r428) (Condition):  attempt to call global 'IsResting' (a nil value)
 ** (r428) conditions.lua line 447: attempt to compare nil with number
 ** (r429) Implemented a workaround for Blizzard's mismanagement of color in the Raid Warning Frame text output
 ** (r429) TellMeWhen_Options.lua:1434: attempt to index local "icon" (a nil value)
 ** (r429) An icon/group should no longer be treated as if it has failing conditions after it had conditions that were failing, but those conditions were removed
 ** (r430) Fixed the list of unitIDs used to guess a unit's class
 ** (r431) A unit's class should now be properly detected when the unit is from another server
 ** (r434) Icon Show/Hide events should work once again
 ** (r435) Unit substitutions should work once again
 ** (r436) Fixed a bug causing the wrong data to be reported for Combat Log Event events
 ** (r437) When a meta icon changes the icon it is checking, it should no longer stop any animations that the meta icon itself initiated (non-inherited animations)
 ** (r439) TellMeWhen-5.0.0.lua:4227: attempt to index local "ic" (a number value)
 ** (r441) TellMeWhen-5.0.0.lua:3572: attempt to compare nil with number
 ** (r442) (Not really a bug fix): Added an option to TMW's main settings to temporarily disable the new update mechanism, reverting to the old method.
 ** (r443) Fixed SPELL_ACTIVATION_OVERLAY_GLOW_HIDE typo.

===v4.8.3===
 * Bug Fixes: